--- a/Ex1/Untitled.ipynb
+++ b/Ex1/Untitled.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.utils import Sequence\n",
     "from skimage.io import imread\n",
@@ -33,7 +25,7 @@
     "        batch_y = self.labels[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
     "\n",
     "        return np.array([\n",
-    "            resize(imread(file_name), (200, 200))\n",
+    "            resize(imread(file_name), (28, 28))\n",
     "               for file_name in batch_x]), np.array(batch_y)"
    ]
   },
@@ -43,15 +35,186 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   my_training_batch_generator = My_Generator(training_filenames, GT_training, batch_size)\n",
-    "   my_validation_batch_generator = My_Generator(validation_filenames, GT_validation, batch_size)\n",
+    "from keras.utils import Sequence\n",
+    "class MY_Generator(Sequence):\n",
     "\n",
-    "   model.fit_generator(generator=my_training_batch_generator,\n",
+    "    def __init__(self, image_filenames, labels, batch_size):\n",
+    "        self.image_filenames, self.labels = image_filenames, labels\n",
+    "        self.batch_size = batch_size\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return np.ceil(len(self.image_filenames) / float(self.batch_size))\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        batch_x = self.image_filenames[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
+    "        batch_y = self.labels[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
+    "\n",
+    "        return np.array([\n",
+    "            Image.open(file_name).resize([28,28])\n",
+    "               for file_name in batch_x]), np.array(batch_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im = Image.open(str(files[1])).resize([28,28])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras import optimizers\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation, Flatten\n",
+    "from keras.layers import Conv2D, MaxPooling2D\n",
+    "from keras import regularizers\n",
+    "from pathlib import Path\n",
+    "import keras\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "\n",
+    "p = Path('./data/') \n",
+    "files = list(p.glob('**/*.png'))\n",
+    "files = str(files).split(\"'\")\n",
+    "files = [ files[i] for i in list(range(1,len(files),2)) ]\n",
+    "classes = str(files).split('/')\n",
+    "classes = [ classes[i] for i in list(range(1,len(classes),2)) ]\n",
+    "classnames, indices = np.unique(classes, return_inverse=True)\n",
+    "labels = keras.utils.to_categorical(indices, len(np.unique(indices)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0],\n",
+       "        [0, 0, 0]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "im=Image.open(files[2]).resize([28,28])\n",
+    "np.array(im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'MY_Generator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-bed5f7bd9e34>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mnum_training_samples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m106\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mmy_training_batch_generator\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMY_Generator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;31m#my_validation_batch_generator = My_Generator(validation_filenames, GT_validation, batch_size)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'MY_Generator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 10\n",
+    "num_epochs = 1\n",
+    "activation = \"relu\"\n",
+    "LR = 0.01\n",
+    "L2 = 0.001\n",
+    "num_training_samples = 106\n",
+    "\n",
+    "my_training_batch_generator = MY_Generator(files, labels, batch_size)\n",
+    "#my_validation_batch_generator = My_Generator(validation_filenames, GT_validation, batch_size)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    Flatten(input_shape = (28, 28, 3), name = \"flatten\"),\n",
+    "    Dense(50, name = \"hidden_1\", kernel_regularizer=regularizers.l2(L2),),\n",
+    "    Activation(activation, name = \"act_hidden_1\"),\n",
+    "    Dense(10, name = \"out\"),\n",
+    "    Activation(\"softmax\", name = \"act_out\")\n",
+    "    ])\n",
+    "\n",
+    "sgd = optimizers.SGD(lr=LR, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "model.compile(optimizer = sgd,\n",
+    "             loss = \"categorical_crossentropy\",\n",
+    "             metrics = [\"accuracy\"])\n",
+    "\n",
+    "model.fit_generator(generator=my_training_batch_generator,\n",
     "                                          steps_per_epoch=(num_training_samples // batch_size),\n",
     "                                          epochs=num_epochs,\n",
     "                                          verbose=1,\n",
-    "                                          validation_data=my_validation_batch_generator,\n",
-    "                                          validation_steps=(num_validation_samples // batch_size),\n",
+    "                                          #validation_data=my_validation_batch_generator,\n",
+    "                                          #validation_steps=(num_validation_samples // batch_size),\n",
     "                                          use_multiprocessing=True,\n",
     "                                          workers=16,\n",
     "                                          max_queue_size=32)"
@@ -59,35 +222,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_NN(x_train, y_train, x_valid, y_valid, L2 = 0.001, activation = \"relu\", LR = 0.01, batch_size = 64):\n",
+    "    from keras import optimizers\n",
+    "    model = Sequential([\n",
+    "        Flatten(input_shape = (1,28, 28), name = \"flatten\"),\n",
+    "        Dense(50, name = \"hidden_1\", kernel_regularizer=regularizers.l2(L2),),\n",
+    "        Activation(activation, name = \"act_hidden_1\"),\n",
+    "        Dense(10, name = \"out\"),\n",
+    "        Activation(\"softmax\", name = \"act_out\")\n",
+    "    ])\n",
+    "    sgd = optimizers.SGD(lr=LR, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "    model.compile(optimizer = sgd,\n",
+    "             loss = \"categorical_crossentropy\",\n",
+    "             metrics = [\"accuracy\"])\n",
+    "    checkpoints = keras.callbacks.ModelCheckpoint(\"./checkpoints/model_{epoch:02d}.hdf5\", \n",
+    "                                              monitor='val_loss', \n",
+    "                                              verbose=0, \n",
+    "                                              save_best_only=False, save_weights_only=False)\n",
+    "    history = model.fit(x_train, y_train, \n",
+    "                    epochs = 10, batch_size = batch_size, \n",
+    "                    callbacks = [checkpoints], \n",
+    "                    validation_data = (x_valid, y_valid))\n",
+    "    return model, history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "p = Path('./data/imgs/')\n",
+    "p = Path('./data/imgs/') \n",
     "classes = [x for x in p.iterdir() if x.is_dir()]\n",
     "files = list(p.glob('**/*.jpg'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'data/imgs/egg__Actinopterygii/34801818.jpg'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str(files[200000])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# euc laptop\n",
+    "from pathlib import Path\n",
+    "p = Path('./data/') \n",
+    "#classes = [x for x in p.iterdir() if x.is_dir()]\n",
+    "files = list(p.glob('**/*.png'))\n",
+    "classes = str(files).split('/')\n",
+    "classes = [ classes[i] for i in list(range(1,len(classes),2)) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.imshow(plt.imread(str(files[1])))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "im = Image.open(str(files[1])).resize([28,28])\n",
+    "#im = im.resize([28,50])\n",
+    "plt.imshow(im)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "im = np.asarray(im)\n",
+    "im.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras\n",
+    "keras.utils.to_categorical(classes, len(np.unique(classes)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classnames, indices = np.unique(classes, return_inverse=True)\n",
+    "keras.utils.to_categorical(indices, len(np.unique(indices)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files2[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -113,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
