--- a/Ex0/Assignment_1_Florian_Muthreich.ipynb
+++ b/Ex0/Assignment_1_Florian_Muthreich.ipynb
@@ -1471,13 +1471,7 @@
       "55000/55000 [==============================] - 1s 24us/step - loss: 0.5799 - acc: 0.8842 - val_loss: 0.6006 - val_acc: 0.8702\n",
       "Epoch 7/10\n",
       "55000/55000 [==============================] - 1s 25us/step - loss: 0.5720 - acc: 0.8868 - val_loss: 0.5811 - val_acc: 0.8784\n",
-      "Epoch 8/10\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 8/10\n",
       "55000/55000 [==============================] - 1s 24us/step - loss: 0.5638 - acc: 0.8886 - val_loss: 0.5632 - val_acc: 0.8856\n",
       "Epoch 9/10\n",
       "55000/55000 [==============================] - 2s 28us/step - loss: 0.5642 - acc: 0.8880 - val_loss: 0.5763 - val_acc: 0.8916\n",
@@ -1604,7 +1598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
