--- a/Ex1/Untitled.ipynb
+++ b/Ex1/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "        self.batch_size = batch_size\n",
     "\n",
     "    def __len__(self):\n",
-    "        return np.ceil(len(self.image_filenames) / float(self.batch_size))\n",
+    "        return int(np.ceil(len(self.image_filenames) / float(self.batch_size)))\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        batch_x = self.image_filenames[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,39 +43,43 @@
     "        self.batch_size = batch_size\n",
     "\n",
     "    def __len__(self):\n",
-    "        return np.ceil(len(self.image_filenames) / float(self.batch_size))\n",
+    "        return int(np.ceil(len(self.image_filenames) / float(self.batch_size)))\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        batch_x = self.image_filenames[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
     "        batch_y = self.labels[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
+    "        \n",
+    "        image = [np.asarray(Image.open(file_name).resize([28,28])) for file_name in batch_x]\n",
+    "        image = image/np.amax(image)\n",
     "\n",
-    "        return np.array([\n",
-    "            Image.open(file_name).resize([28,28])\n",
-    "               for file_name in batch_x]), np.array(batch_y)"
+    "        return np.array(image), np.array(batch_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im = Image.open(str(files[1])).resize([28,28])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "5.3"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "106/20\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from keras import optimizers\n",
     "from keras.models import Sequential\n",
@@ -87,107 +91,92 @@
     "import numpy as np\n",
     "from PIL import Image\n",
     "\n",
-    "p = Path('./data/') \n",
+    "p = Path('./data/euc/') \n",
     "files = list(p.glob('**/*.png'))\n",
     "files = str(files).split(\"'\")\n",
     "files = [ files[i] for i in list(range(1,len(files),2)) ]\n",
     "classes = str(files).split('/')\n",
-    "classes = [ classes[i] for i in list(range(1,len(classes),2)) ]\n",
+    "classes = [ classes[i] for i in list(range(2,len(classes),3)) ]\n",
     "classnames, indices = np.unique(classes, return_inverse=True)\n",
     "labels = keras.utils.to_categorical(indices, len(np.unique(indices)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 56,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0]],\n",
-       "\n",
-       "       [[0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0]],\n",
-       "\n",
-       "       [[0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0]],\n",
-       "\n",
-       "       [[0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0]],\n",
-       "\n",
-       "       [[0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0],\n",
-       "        [0, 0, 0]]], dtype=uint8)"
+       "<__main__.MY_Generator at 0x7ff3f4ecd5f8>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "im=Image.open(files[2]).resize([28,28])\n",
-    "np.array(im)"
+    "my_training_batch_generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'MY_Generator' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-bed5f7bd9e34>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mnum_training_samples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m106\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mmy_training_batch_generator\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMY_Generator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;31m#my_validation_batch_generator = My_Generator(validation_filenames, GT_validation, batch_size)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'MY_Generator' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.7869 - acc: 0.5094\n",
+      "Epoch 2/20\n",
+      "1/1 [==============================] - 0s 7ms/step - loss: 0.7804 - acc: 0.5189\n",
+      "Epoch 3/20\n",
+      "1/1 [==============================] - 1s 535ms/step - loss: 0.7723 - acc: 0.5566\n",
+      "Epoch 4/20\n",
+      "1/1 [==============================] - 1s 518ms/step - loss: 0.7633 - acc: 0.6038\n",
+      "Epoch 5/20\n",
+      "1/1 [==============================] - 1s 538ms/step - loss: 0.7540 - acc: 0.6415\n",
+      "Epoch 6/20\n",
+      "1/1 [==============================] - 1s 536ms/step - loss: 0.7453 - acc: 0.6981\n",
+      "Epoch 7/20\n",
+      "1/1 [==============================] - 1s 539ms/step - loss: 0.7365 - acc: 0.7075\n",
+      "Epoch 8/20\n",
+      "1/1 [==============================] - 1s 545ms/step - loss: 0.7273 - acc: 0.7264\n",
+      "Epoch 9/20\n",
+      "1/1 [==============================] - 1s 549ms/step - loss: 0.7177 - acc: 0.7453\n",
+      "Epoch 10/20\n",
+      "1/1 [==============================] - 1s 538ms/step - loss: 0.7081 - acc: 0.7453\n",
+      "Epoch 11/20\n",
+      "1/1 [==============================] - 1s 551ms/step - loss: 0.6984 - acc: 0.7547\n",
+      "Epoch 12/20\n",
+      "1/1 [==============================] - 1s 532ms/step - loss: 0.6888 - acc: 0.7358\n",
+      "Epoch 13/20\n",
+      "1/1 [==============================] - 1s 547ms/step - loss: 0.6790 - acc: 0.7453\n",
+      "Epoch 14/20\n",
+      "1/1 [==============================] - 1s 534ms/step - loss: 0.6693 - acc: 0.7547\n",
+      "Epoch 15/20\n",
+      "1/1 [==============================] - 1s 544ms/step - loss: 0.6593 - acc: 0.7642\n",
+      "Epoch 16/20\n",
+      "1/1 [==============================] - 1s 545ms/step - loss: 0.6488 - acc: 0.7736\n",
+      "Epoch 17/20\n",
+      "1/1 [==============================] - 1s 537ms/step - loss: 0.6383 - acc: 0.7736\n",
+      "Epoch 18/20\n",
+      "1/1 [==============================] - 1s 542ms/step - loss: 0.6275 - acc: 0.7830\n",
+      "Epoch 19/20\n",
+      "1/1 [==============================] - 1s 535ms/step - loss: 0.6169 - acc: 0.8019\n",
+      "Epoch 20/20\n",
+      "1/1 [==============================] - 1s 541ms/step - loss: 0.6063 - acc: 0.8113\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 10\n",
-    "num_epochs = 1\n",
+    "batch_size = 106\n",
+    "num_epochs = 20\n",
     "activation = \"relu\"\n",
     "LR = 0.01\n",
     "L2 = 0.001\n",
@@ -200,7 +189,7 @@
     "    Flatten(input_shape = (28, 28, 3), name = \"flatten\"),\n",
     "    Dense(50, name = \"hidden_1\", kernel_regularizer=regularizers.l2(L2),),\n",
     "    Activation(activation, name = \"act_hidden_1\"),\n",
-    "    Dense(10, name = \"out\"),\n",
+    "    Dense(2, name = \"out\"),\n",
     "    Activation(\"softmax\", name = \"act_out\")\n",
     "    ])\n",
     "\n",
@@ -209,7 +198,7 @@
     "             loss = \"categorical_crossentropy\",\n",
     "             metrics = [\"accuracy\"])\n",
     "\n",
-    "model.fit_generator(generator=my_training_batch_generator,\n",
+    "history = model.fit_generator(generator=my_training_batch_generator,\n",
     "                                          steps_per_epoch=(num_training_samples // batch_size),\n",
     "                                          epochs=num_epochs,\n",
     "                                          verbose=1,\n",
@@ -381,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
