--- a/Ex1/Assignment 1.ipynb
+++ b/Ex1/Assignment 1.ipynb
@@ -17,68 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.utils import Sequence\n",
-    "from skimage.io import imread\n",
-    "from skimage.transform import resize\n",
-    "import numpy as np\n",
-    "\n",
-    "class MY_Generator(Sequence):\n",
-    "\n",
-    "    def __init__(self, image_filenames, labels, batch_size):\n",
-    "        self.image_filenames, self.labels = image_filenames, labels\n",
-    "        self.batch_size = batch_size\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return int(np.ceil(len(self.image_filenames) / float(self.batch_size)))\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        batch_x = self.image_filenames[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
-    "        batch_y = self.labels[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
-    "\n",
-    "        return np.array([\n",
-    "            resize(imread(file_name), (29, 29), mode = \"reflect\")\n",
-    "               for file_name in batch_x]), np.array(batch_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.utils import Sequence\n",
-    "from skimage.io import imread\n",
-    "from skimage.transform import resize\n",
-    "import numpy as np\n",
-    "\n",
-    "class MY_Generator(Sequence):\n",
-    "\n",
-    "    def __init__(self, image_filenames, labels, batch_size):\n",
-    "        self.image_filenames, self.labels = image_filenames, labels\n",
-    "        self.batch_size = batch_size\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return int(np.ceil(len(self.image_filenames) / float(self.batch_size)))\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        batch_x = self.image_filenames[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
-    "        batch_y = self.labels[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
-    "        \n",
-    "        image = [resize(imread(file_name), (299, 299), mode = \"reflect\") for file_name in batch_x]\n",
-    "        image = image/np.amax(image)\n",
-    "\n",
-    "        return np.array(image), np.array(batch_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.utils import Sequence\n",
     "import skimage\n",
@@ -124,7 +73,6 @@
     "from pathlib import Path\n",
     "import keras\n",
     "import numpy as np\n",
-    "from PIL import Image\n",
     "import random\n",
     "\n",
     "\n",
@@ -143,48 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch_size = 100\n",
-    "num_epochs = 10\n",
-    "activation = \"relu\"\n",
-    "LR = 0.9\n",
-    "L2 = 0.001\n",
-    "num_training_samples = len(files)\n",
-    "dim = 299\n",
-    "\n",
-    "my_training_batch_generator = MY_Gen(files, labels, batch_size)\n",
-    "#my_validation_batch_generator = My_Generator(validation_filenames, GT_validation, batch_size)\n",
-    "\n",
-    "mlp = Sequential([\n",
-    "    Flatten(input_shape = (dim, dim, 3), name = \"flatten\"),\n",
-    "    Dense(500, name = \"hidden_1\"), #kernel_regularizer=regularizers.l2(L2),),\n",
-    "    Activation(activation, name = \"act_hidden_1\"),\n",
-    "    Dense(3, name = \"out\"),\n",
-    "    Activation(\"softmax\", name = \"act_out\")\n",
-    "    ])\n",
-    "\n",
-    "#sgd = optimizers.SGD(lr=LR, decay=1e-6, momentum=0.09, nesterov=True)\n",
-    "mlp.compile(optimizer = 'rmsprop',\n",
-    "             loss = \"categorical_crossentropy\",\n",
-    "             metrics = [\"accuracy\"])\n",
-    "\n",
-    "history = mlp.fit_generator(generator=my_training_batch_generator,\n",
-    "                                          steps_per_epoch=(num_training_samples // batch_size),\n",
-    "                                          epochs=num_epochs,\n",
-    "                                          verbose=1,\n",
-    "                                          #validation_data=my_validation_batch_generator,\n",
-    "                                          #validation_steps=(num_validation_samples // batch_size),\n",
-    "                                          use_multiprocessing=True,\n",
-    "                                          workers=16,\n",
-    "                                          max_queue_size=32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,34 +128,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "3/3 [==============================] - 10s 3s/step - loss: 5.6349 - acc: 0.3467\n",
+      "3/3 [==============================] - 6s 2s/step - loss: 4.4038 - acc: 0.4800\n",
       "Epoch 2/10\n",
-      "3/3 [==============================] - 3s 836ms/step - loss: 7.9303 - acc: 0.4267\n",
+      "3/3 [==============================] - 2s 819ms/step - loss: 6.4681 - acc: 0.5633\n",
       "Epoch 3/10\n",
-      "3/3 [==============================] - 2s 808ms/step - loss: 6.9073 - acc: 0.3700\n",
+      "3/3 [==============================] - 2s 816ms/step - loss: 2.0170 - acc: 0.6300\n",
       "Epoch 4/10\n",
-      "3/3 [==============================] - 2s 812ms/step - loss: 5.6284 - acc: 0.5600\n",
+      "3/3 [==============================] - 3s 843ms/step - loss: 1.9263 - acc: 0.6367\n",
       "Epoch 5/10\n",
-      "3/3 [==============================] - 2s 814ms/step - loss: 5.3780 - acc: 0.6667\n",
+      "3/3 [==============================] - 2s 786ms/step - loss: 0.4437 - acc: 0.8433\n",
       "Epoch 6/10\n",
-      "3/3 [==============================] - 2s 820ms/step - loss: 5.3770 - acc: 0.6667\n",
+      "3/3 [==============================] - 2s 828ms/step - loss: 0.0418 - acc: 0.9833\n",
       "Epoch 7/10\n",
-      "3/3 [==============================] - 2s 768ms/step - loss: 5.3766 - acc: 0.6667\n",
+      "3/3 [==============================] - 2s 770ms/step - loss: 0.0316 - acc: 0.9967\n",
       "Epoch 8/10\n",
-      "3/3 [==============================] - 3s 834ms/step - loss: 5.3762 - acc: 0.6667\n",
+      "3/3 [==============================] - 2s 773ms/step - loss: 0.0339 - acc: 0.9933\n",
       "Epoch 9/10\n",
-      "3/3 [==============================] - 2s 819ms/step - loss: 5.3758 - acc: 0.6667\n",
+      "3/3 [==============================] - 2s 805ms/step - loss: 0.0207 - acc: 1.0000\n",
       "Epoch 10/10\n",
-      "3/3 [==============================] - 2s 809ms/step - loss: 5.3754 - acc: 0.6667\n"
+      "3/3 [==============================] - 2s 828ms/step - loss: 0.0182 - acc: 1.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f00f241f978>"
+       "<keras.callbacks.History at 0x7f8e6e3c37f0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,6 +183,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
+    "outputTensor = model.output\n",
+    "listOfVariableTensors = model.trainable_weights\n",
+    "gradients = K.gradients(outputTensor, listOfVariableTensors)\n",
+    "\n",
+    "trainingExample = np.random.random((1,299,299,3))\n",
+    "sess = K.get_session()\n",
+    "sess.run(tf.initialize_all_variables())\n",
+    "evaluated_gradients = sess.run(gradients,feed_dict={model.input:trainingExample})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(evaluated_gradients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#im=np.asarray(Image.open(files[1]).resize([299,299]))\n",
     "#im = im/np.amax(im)\n",
     "#import matplotlib.pyplot as plt\n",
@@ -292,20 +225,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 100, 3)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import skimage\n",
     "im = resize(imread(files[1]), (100, 100))\n",
@@ -348,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,46 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "3/3 [==============================] - 8s 3s/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 2/10\n",
-      "3/3 [==============================] - 3s 857ms/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 3/10\n",
-      "3/3 [==============================] - 2s 815ms/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 4/10\n",
-      "3/3 [==============================] - 2s 803ms/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 5/10\n",
-      "3/3 [==============================] - 3s 850ms/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 6/10\n",
-      "3/3 [==============================] - 2s 804ms/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 7/10\n",
-      "3/3 [==============================] - 2s 800ms/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 8/10\n",
-      "3/3 [==============================] - 3s 853ms/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 9/10\n",
-      "3/3 [==============================] - 2s 796ms/step - loss: 10.7454 - acc: 0.3333\n",
-      "Epoch 10/10\n",
-      "3/3 [==============================] - 3s 855ms/step - loss: 10.7454 - acc: 0.3333\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f00fc1becc0>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size=100\n",
     "num_training_samples=len(files)\n",
