tried tores code; found source of error; implemented batchnorm; implemented shuffle on epoch end

--- a/Ex1/Assignment 1.ipynb
+++ b/Ex1/Assignment 1.ipynb
@@ -29,17 +29,35 @@
     }
    ],
    "source": [
+    "from keras import optimizers\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation, Flatten\n",
+    "from keras.layers import Conv2D, MaxPooling2D\n",
+    "from keras import regularizers\n",
+    "from pathlib import Path\n",
+    "import keras\n",
+    "import random\n",
     "from keras.utils import Sequence\n",
     "import skimage\n",
     "from skimage.io import imread\n",
     "from skimage.transform import resize\n",
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class MY_Gen(Sequence):\n",
     "\n",
-    "    def __init__(self, image_filenames, labels, batch_size):\n",
+    "    def __init__(self, image_filenames, labels, batch_size, shuffle):\n",
     "        self.image_filenames, self.labels = image_filenames, labels\n",
     "        self.batch_size = batch_size\n",
+    "        self.num_labels = len(np.unique(labels))\n",
+    "        self.shuffle = shuffle\n",
+    "        self.on_epoch_end()\n",
     "\n",
     "    def __len__(self):\n",
     "        return int(np.ceil(len(self.image_filenames) / float(self.batch_size)))\n",
@@ -48,33 +66,30 @@
     "        image = imread(filename)\n",
     "        image = resize(image, (dim,dim), anti_aliasing = True, mode = \"reflect\")\n",
     "        image = skimage.color.gray2rgb(image)\n",
-    "        image = (image-np.amin(image))/(np.amax(image)-np.amin(image))\n",
     "\n",
     "        return image\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        batch_x = self.image_filenames[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
     "        batch_y = self.labels[idx * self.batch_size:(idx + 1) * self.batch_size]\n",
-    "\n",
-    "        return np.array([self.__norm_im(filename, 299) for filename in batch_x]), np.array(batch_y)"
+    "        image = [self.__norm_im(filename, 299) for filename in batch_x]\n",
+    "        image = (image-np.amin(image))/(np.amax(image)-np.amin(image))\n",
+    "        batch_y = keras.utils.to_categorical(batch_y, self.num_labels)\n",
+    "        return np.array(image), np.array(batch_y)\n",
+    "    \n",
+    "    def on_epoch_end(self):\n",
+    "        if self.shuffle == True:\n",
+    "            fnames_and_labels = list(zip(self.image_filenames, self.labels))\n",
+    "            random.shuffle(fnames_and_labels)\n",
+    "            self.image_filenames, self.labels = zip(*fnames_and_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras import optimizers\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Activation, Flatten\n",
-    "from keras.layers import Conv2D, MaxPooling2D\n",
-    "from keras import regularizers\n",
-    "from pathlib import Path\n",
-    "import keras\n",
-    "import numpy as np\n",
-    "import random\n",
-    "\n",
     "\n",
     "p = Path('./data/test/') \n",
     "files = list(p.glob('**/*.jpg'))\n",
@@ -83,7 +98,7 @@
     "classes = str(files).split('/')\n",
     "classes = [ classes[i] for i in list(range(2,len(classes),3)) ]\n",
     "c=list(zip(files,classes))\n",
-    "random.shuffle(c)\n",
+    "#random.shuffle(c)\n",
     "files,classes = zip (*c)\n",
     "classnames, indices = np.unique(classes, return_inverse=True)\n",
     "labels = keras.utils.to_categorical(indices, len(np.unique(indices)))"
@@ -91,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,52 +135,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "shuffled\n",
       "Epoch 1/10\n",
-      "3/3 [==============================] - 6s 2s/step - loss: 4.4038 - acc: 0.4800\n",
+      " 9/10 [==========================>...] - ETA: 2s - loss: 2.0478 - acc: 0.3370shuffled\n",
+      "10/10 [==============================] - 23s 2s/step - loss: 1.8769 - acc: 0.4000\n",
       "Epoch 2/10\n",
-      "3/3 [==============================] - 2s 819ms/step - loss: 6.4681 - acc: 0.5633\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.4205 - acc: 0.8556shuffled\n",
+      "10/10 [==============================] - 3s 326ms/step - loss: 0.4006 - acc: 0.8633\n",
       "Epoch 3/10\n",
-      "3/3 [==============================] - 2s 816ms/step - loss: 2.0170 - acc: 0.6300\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.2163 - acc: 0.9333shuffled\n",
+      "10/10 [==============================] - 3s 337ms/step - loss: 0.2063 - acc: 0.9367\n",
       "Epoch 4/10\n",
-      "3/3 [==============================] - 3s 843ms/step - loss: 1.9263 - acc: 0.6367\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.0891 - acc: 0.9778shuffled\n",
+      "10/10 [==============================] - 3s 332ms/step - loss: 0.0941 - acc: 0.9733\n",
       "Epoch 5/10\n",
-      "3/3 [==============================] - 2s 786ms/step - loss: 0.4437 - acc: 0.8433\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.0389 - acc: 0.9963shuffled\n",
+      "10/10 [==============================] - 3s 336ms/step - loss: 0.0418 - acc: 0.9933\n",
       "Epoch 6/10\n",
-      "3/3 [==============================] - 2s 828ms/step - loss: 0.0418 - acc: 0.9833\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.0421 - acc: 0.9889shuffled\n",
+      "10/10 [==============================] - 3s 336ms/step - loss: 0.0401 - acc: 0.9900\n",
       "Epoch 7/10\n",
-      "3/3 [==============================] - 2s 770ms/step - loss: 0.0316 - acc: 0.9967\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.0531 - acc: 0.9852shuffled\n",
+      "10/10 [==============================] - 3s 325ms/step - loss: 0.0581 - acc: 0.9767\n",
       "Epoch 8/10\n",
-      "3/3 [==============================] - 2s 773ms/step - loss: 0.0339 - acc: 0.9933\n",
+      "10/10 [==============================] - 3s 330ms/step - loss: 0.0268 - acc: 0.9967\n",
       "Epoch 9/10\n",
-      "3/3 [==============================] - 2s 805ms/step - loss: 0.0207 - acc: 1.0000\n",
+      "shuffled\n",
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.0367 - acc: 0.9963shuffled\n",
+      "10/10 [==============================] - 3s 341ms/step - loss: 0.0360 - acc: 0.9967\n",
       "Epoch 10/10\n",
-      "3/3 [==============================] - 2s 828ms/step - loss: 0.0182 - acc: 1.0000\n"
+      " 9/10 [==========================>...] - ETA: 0s - loss: 0.0447 - acc: 0.9889shuffled\n",
+      "10/10 [==============================] - 3s 332ms/step - loss: 0.0405 - acc: 0.9900\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f8e6e3c37f0>"
+       "<keras.callbacks.History at 0x7fdc3c4755f8>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "batch_size=100\n",
+    "batch_size=30\n",
     "num_training_samples=len(files)\n",
     "\n",
-    "my_training_batch_generator = MY_Gen(files, labels, batch_size)\n",
-    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics = ['accuracy'])\n",
+    "my_training_batch_generator = MY_Gen(files, indices, batch_size, shuffle = True)\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics = ['accuracy'])\n",
     "\n",
     "model.fit_generator(generator=my_training_batch_generator,\n",
     "                                          steps_per_epoch=(num_training_samples // batch_size),\n",
@@ -175,6 +201,19 @@
     "                                          workers=16,\n",
     "                                          max_queue_size=32)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_string = model.to_json()\n",
+    "with open(\"INC_test.json\", \"w\") as json_file:\n",
+    "    json_file.write(json_string)\n",
+    "\n",
+    "model.save_weights(\"INC_test_weights.hdf5\")"
    ]
   },
   {
@@ -261,11 +300,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "labels"
+    "#files[range(1,10)]\n",
+    "list(indices)\n",
+    "keras.utils.to_categorical(indices, 5)\n",
+    "len(np.unique(indices))"
    ]
   },
   {
