worked on data oversampling

--- a/Ex1/Assignment 1.ipynb
+++ b/Ex1/Assignment 1.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +102,111 @@
     "files,classes = zip (*c)\n",
     "classnames, indices = np.unique(classes, return_inverse=True)\n",
     "labels = keras.utils.to_categorical(indices, len(np.unique(indices)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "def split_data_train_validation_test(data_X, data_Y, test_percent, validation_percent, seed): \n",
+    "    assert (test_percent < 1) and (0 < validation_percent) and (validation_percent < 1)\n",
+    "    X_tmp, X_val, Y_tmp, Y_val = train_test_split(data_X, data_Y, test_size=validation_percent, shuffle=True, random_state=seed)\n",
+    "    \n",
+    "    if test_percent != 0:\n",
+    "        relative_test_percent = test_percent / (1 - validation_percent)\n",
+    "        X_train, X_test, Y_train, Y_test = train_test_split(X_tmp, Y_tmp, test_size=relative_test_percent, shuffle=True, random_state=seed)\n",
+    "        split_data = [X_train, Y_train, X_val, Y_val, X_test, Y_test]\n",
+    "    else:\n",
+    "        X_train, Y_train = X_tmp, Y_tmp\n",
+    "        split_data = [X_train, Y_train, X_val, Y_val]\n",
+    "\n",
+    "    return split_data\n",
+    "\n",
+    "split = split_data_train_validation_test(files, indices, 0, .25, 1190)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 75), (1, 78), (2, 72)]\n",
+      "[(0, 78), (1, 78), (2, 78)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "ros = RandomOverSampler(random_state = 0)\n",
+    "x_re, y_re = ros.fit_resample(np.array(split[0]).reshape(-1,1), split[1])\n",
+    "from collections import Counter\n",
+    "print(sorted(Counter(split[1]).items()))\n",
+    "print(sorted(Counter(y_re).items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 238, 255, 255],\n",
+       "       ...,\n",
+       "       [236, 226, 218, ..., 255, 255, 255],\n",
+       "       [255, 235, 235, ..., 255, 255, 255],\n",
+       "       [241, 238, 255, ..., 255, 255, 255]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import chain\n",
+    "\n",
+    "imread(list(chain(*x_re.tolist()))[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'numpy.ndarray'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-a512a4a96f52>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_re\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'numpy.ndarray'"
+     ]
+    }
+   ],
+   "source": [
+    "#import keras_metrics\n",
+    "#metrics=[keras_metrics.precision(), keras_metrics.recall()\n",
+    "b = {}\n",
+    "for i in list(np.array(x_re)):\n",
+    "    b[i] = b.get(i,0) + 1\n",
+    "\n",
+    "dict((k, v) for k, v in b.items() if v > 1)\n",
+    "\n",
+    "#x_re"
    ]
   },
   {
