minor changes; began main script

--- a/Ex1/Assignment 1.ipynb
+++ b/Ex1/Assignment 1.ipynb
@@ -199,11 +199,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#files, classes, dict_classes = fetch_data_set(\"./data/imgs/\")\n",
-    "\n",
-    "#x_re, y_re = over_under_sample(files, classes, dict_classes)\n",
-    "\n",
+    "# read dataset\n",
+    "files, classes, dict_classes = fetch_data_set(\"./data/imgs/\")\n",
+    "# split dataset\n",
     "split = split_data_train_validation_test(files, classes, 0.05, .25, random.randint(1,10000))\n",
+    "split[0], split[1] = over_under_sample(split[0], split[1], dict_classes)\n",
+    "# load label encoder and transform labels\n",
+    "split[1], OH_enc = encode_labels(split[1], OneHot = True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "#from collections import Counter\n",
     "#print(sorted(Counter(classes).items()))\n",
