--- a/Ex3/Ex3.ipynb
+++ b/Ex3/Ex3.ipynb
@@ -1288,6 +1288,92 @@
     "#centroid(image_vectors['Annelida'])\n",
     "knn_test(model, \"validate\", \"test\", k=5)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def move_and_split_data_set(path):\n",
+    "    import glob\n",
+    "    import re\n",
+    "    import os\n",
+    "    from random import shuffle\n",
+    "    import shutil\n",
+    "    classes = glob.glob(path + \"*\")\n",
+    "    classes = [re.search(path + \"(.*)\", classes[i]).group(1) for i in range(len(classes))]\n",
+    "    folders = [\"test\", \"validate\", \"train\"]\n",
+    "    for i in folders:\n",
+    "        if i in classes: classes.remove(i)\n",
+    "    print(\"Number of classes: \",len(classes))\n",
+    "    for i in folders:\n",
+    "        print(\"Creating \",i,\"-set\")\n",
+    "        if not os.path.isdir(path + i):\n",
+    "            os.mkdir(path + i)\n",
+    "            \n",
+    "        for c in classes:\n",
+    "            print(\"Moving files: \", c)\n",
+    "            if not os.path.isdir(path + i + \"/\" + c):\n",
+    "                os.mkdir(path + i + \"/\" + c)\n",
+    "            files = glob.glob(path + c + \"/*\")\n",
+    "            shuffle(files)\n",
+    "            if i == \"train\":\n",
+    "                for f in files:\n",
+    "                    #print(\"\")\n",
+    "                    shutil.move(f, path + i + \"/\" + c + re.search(\"/\"+c+\"(.*)\", f).group(1) )\n",
+    "                    # end for files\n",
+    "            else:\n",
+    "                for f in files[0:10]:\n",
+    "                    #print(f,\"___\", path + i + \"/\" + c + re.search(\"/\"+c+\"(.*)\", f).group(1))\n",
+    "                    shutil.move(f, path + i + \"/\" + c + re.search(\"/\"+c+\"(.*)\", f).group(1) )\n",
+    "                    #end for files\n",
+    "    print(\"Removing Old class folders\")\n",
+    "    for c in classes:\n",
+    "        os.rmdir(path + c)\n",
+    "    return classes\n",
+    "\n",
+    "#fetch_data_set(\"Ex3/plankton_siamese/Euc/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = fetch_data_set(\"plankton_siamese/data/Euc/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c', 'd']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [\"c\",\"a\",\"d\",\"b\"]\n",
+    "for i in [\"a\",\"b\"]:\n",
+    "    if i in l: l.remove(i) \n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
